Fix preload position on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -13,6 +13,14 @@ body, html {
 .preloader-wrapper {
     position: fixed;
     top: 45%;
-    left: 47%;
+    left: 45%;
 }
+
+
+@media (min-width: 993px) {
+    .preloader-wrapper {
+        left: 47%;
+    }
+}
+
 
